попытка исправить ошибки

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         if (retry) window.retryAction = retry;
     };
     
-    console.log('RuChat запущен в режиме разработки (file://)');
+    console.log('RuChat запущен');
     
     // Автоматическое скрытие меню при клике вне их
     document.addEventListener('click', function(e) {
