--- a/index.html
+++ b/index.html
@@ -402,32 +402,39 @@
 <!-- ===== ОВЕРЛЕЙ ЗАПИСИ ВИДЕОСООБЩЕНИЯ ===== -->
 <div class="record-overlay video-record-overlay" id="videoRecordOverlay">
     <div class="record-modal video-record-modal">
-        <div class="video-preview-container">
-            <video class="video-preview" id="videoPreview" autoplay muted></video>
-            <div class="recording-indicator" id="recordingIndicator">
-                <div class="recording-dot"></div>
-                <span>Идет запись...</span>
-            </div>
-            <div class="record-timer" id="videoTimer">00:00</div>
-            <div class="camera-controls">
-                <button class="icon-btn" onclick="toggleCamera()" title="Перевернуть камеру">
-                    <span class="camera-icon">🔄</span>
+        <div class="video-preview-wrapper">
+            <video class="video-preview" id="videoPreview" autoplay muted playsinline webkit-playsinline></video>
+            <div class="video-preview-overlay">
+                <div class="recording-timer" id="videoTimer">00:00</div>
+                <button class="camera-switch-btn" id="cameraSwitchBtn" onclick="toggleCamera()" title="Переключить камеру">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M23 7l-7 5 7 5V7z"></path>
+                        <path d="M14 5H3a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h11"></path>
+                        <path d="M1 7l7 5-7 5V7z"></path>
+                        <path d="M10 19H21a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H10"></path>
+                    </svg>
                 </button>
-                <button class="icon-btn" onclick="cancelVideoRecording()" title="Отмена">
-                    <span class="cancel-icon">✕</span>
+                <button class="camera-close-btn" onclick="cancelVideoRecording()" title="Закрыть">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
                 </button>
+                <div class="recording-indicator" id="recordingIndicator" style="display:none;">
+                    <div class="recording-dot"></div>
+                </div>
             </div>
         </div>
-        <div class="record-controls video-record-controls">
+        <div class="video-record-controls">
             <div class="record-lock" id="videoLockIndicator">
                 <div class="lock-icon">🔒</div>
                 <div class="lock-text" id="videoLockHint">Потяните вверх, чтобы закрепить</div>
             </div>
-            <button class="record-btn video-record-btn" id="videoRecordBtn"
+            <button class="video-record-circle-btn" id="videoRecordBtn"
                     onmousedown="startVideoRecordingAction()"
                     ontouchstart="startVideoRecordingAction()"
                     title="Удерживайте для записи">
-                <div class="video-record-btn-inner"></div>
+                <div class="video-record-circle-inner"></div>
             </button>
             <div class="record-hint">Свайп вверх — закрепить, влево — отмена</div>
         </div>
@@ -551,7 +558,7 @@
 <script src="js/stickers.js?v=20260219d"></script>
 <script src="js/groups.js?v=20260219d"></script>
 <script src="js/mobile.js?v=20260222a"></script>
-<script src="js/video-messages.js?v=20260219d"></script>
+<script src="js/video-messages.js?v=20260222b"></script>
 <script src="js/audio-call.js?v=20260219d"></script>
 <script src="js/settings.js?v=20260219d"></script>
 
