--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
     
     <!-- Стили -->
     <link rel="stylesheet" href="css/style.css?v=20260222a">
@@ -572,7 +573,8 @@
 </div>
 
 <!-- Скрипты -->
-<script src="js/firebase-config.js?v=20260219d"></script>
+<script src="js/firebase-config.js?v=20260222a"></script>
+<script src="js/storage.js?v=20260222a"></script>
 <script src="js/utils.js?v=20260219d"></script> <!-- ПЕРВЫЙ! Содержит глобальные переменные -->
 <script src="js/main.js?v=20260219d"></script>
 <script src="js/ui.js?v=20260219d"></script>
@@ -580,12 +582,12 @@
 <script src="js/auth.js?v=20260219d"></script>
 <script src="js/status.js?v=20260222a"></script>
 <script src="js/chat.js?v=20260222b"></script>
-<script src="js/media.js?v=20260222d"></script>
+<script src="js/media.js?v=20260222e"></script>
 <script src="js/emoji.js?v=20260219d"></script>
 <script src="js/stickers.js?v=20260219d"></script>
 <script src="js/groups.js?v=20260219d"></script>
 <script src="js/mobile.js?v=20260222a"></script>
-<script src="js/video-messages.js?v=20260222b"></script>
+<script src="js/video-messages.js?v=20260222c"></script>
 <script src="js/audio-call.js?v=20260219d"></script>
 <script src="js/settings.js?v=20260219d"></script>
 
