--- a/index.html
+++ b/index.html
@@ -655,6 +655,8 @@
 <script src="js/ui.js?v=20260219d"></script>
 <script src="js/sounds.js?v=20260219d"></script>
 <script src="js/auth.js?v=20260219d"></script>
+<script src="js/master-encryption.js?v=20260223b"></script>
+<script src="js/encryption.js?v=20260222a"></script>
 <script src="js/status.js?v=20260222a"></script>
 <script src="js/chat.js?v=20260222b"></script>
 <script src="js/media.js?v=20260222e"></script>
@@ -665,7 +667,7 @@
 <script src="js/video-messages.js?v=20260222c"></script>
 <script src="js/audio-call.js?v=20260219d"></script>
 <script src="js/settings.js?v=20260219d"></script>
-<script src="js/extras.js?v=20260223a"></script>
+<script src="js/extras.js?v=20260223b"></script>
 <script src="js/video-call.js?v=20260223a"></script>
 <script src="js/stories-new.js?v=20260223a"></script>
 <script src="js/customization.js?v=20260223a"></script>
