--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 
         <div class="stories-container" id="storiesContainer">
             <div class="stories-list" id="storiesList"></div>
+            <button class="add-story-btn" onclick="showAddStoryDialog()" title="Добавить историю">➕</button>
         </div>
 
         <div class="messages-container" id="messages"></div>
