--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 <script src="js/groups.js?v=20260219d"></script>
 <script src="js/mobile.js?v=20260219d"></script>
 <script src="js/video-messages.js?v=20260224a"></script>
-<script src="js/audio-call.js?v=20260224b"></script>
+<script src="js/audio-call.js?v=20260224d"></script>
 <script src="js/settings.js?v=20260219d"></script>
 
 <script>
@@ -561,7 +561,7 @@
         return window.location.protocol === 'file:';
     };
 
-    console.log('Build 2026-02-24b (звонки исправлены)');
+    console.log('Build 2026-02-24d (добавлен алиас startVoiceCall)');
     
     // Автоматическое скрытие меню при клике вне их
     document.addEventListener('click', function(e) {
