--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 <script src="js/groups.js?v=20260219d"></script>
 <script src="js/mobile.js?v=20260219d"></script>
 <script src="js/video-messages.js?v=20260224a"></script>
-<script src="js/audio-call.js?v=20260224h"></script>
+<script src="js/audio-call.js?v=20260224i"></script>
 <script src="js/settings.js?v=20260219d"></script>
 
 <script>
@@ -570,7 +570,7 @@
         return window.location.protocol === 'file:';
     };
 
-    console.log('Build 2026-02-24h (индикатор микрофона)');
+    console.log('Build 2026-02-24i (исправлен конфликт звонков)');
     
     // Автоматическое скрытие меню при клике вне их
     document.addEventListener('click', function(e) {
