--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
 <script src="js/groups.js?v=20260219d"></script>
 <script src="js/mobile.js?v=20260219d"></script>
 <script src="js/video-messages.js?v=20260224a"></script>
-<script src="js/audio-call.js?v=20260224o"></script>
+<script src="js/audio-call.js?v=20260224p"></script>
 <script src="js/settings.js?v=20260219d"></script>
 
 <script>
@@ -570,7 +570,7 @@
         return window.location.protocol === 'file:';
     };
 
-    console.log('Build 2026-02-24o (публичные TURN серверы)');
+    console.log('Build 2026-02-24p (игнор ended из Firebase)');
     
     // Автоматическое скрытие меню при клике вне их
     document.addEventListener('click', function(e) {
